# esp-mqtt-dht

./: .gitignore  .gitmodules  CMakePresets.json  README.md  esp32_serial2_with_SmartConfig_mod.ino  sdkconfig  sdkconfig.old
components/arduino-libs/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp  smart_config.cpp  smart_config.h  smart_config.hpp
